financial literacy page
new financial literacy page, added medium links, and edited other page content

--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -102,7 +102,7 @@
                 <div class="mb-5">
                   <p>Basically Boba was created out of my growing resentment towards the low-quality, unhealthy boba served in the Bay Area. Many boba shops chose to use cheaper and unhealthier alternatives to flavor their drinks– “fruit” syrups that are 99% high fructose corn syrup, “milk” powder that doesn’t even contain real dairy, and tea leaves reused beyond their capacity just to save some money. Check out our website for more information. </p>
                 </div>
-                <h4 class="h4 mb-3">What I did</h4>
+                <h4 class="h4 mb-3">What We Did:</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>Made-to-Order System</li>
                   <li>Transparent &amp; Healthy Ingredients</li>
@@ -156,14 +156,32 @@
             </div>
           </div>
 
-          <div class="row" data-aos="fade-up" data-aos-delay="200">
-            <div class="item projects col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+          <div class="item projects col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="basicallyboba.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Basically Boba</h3>
                 <span>Projects</span>
               </div>
               <img class="img-fluid" src="img/basicallyboba.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="financialliteracy.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>The Importance of Financial Literacy</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/financialliteracy.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="introtofedreserve.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Intro to The Fed Reserve</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/federalreserve.jpg">
             </a>
           </div>
           <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -175,15 +193,6 @@
               <img class="img-fluid" src="img/economics.jpg">
             </a>
           </div>
-          <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="introtofedreserve.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Intro to The Fed Reserve</h3>
-                <span>Finance</span>
-              </div>
-              <img class="img-fluid" src="img/federalreserve.jpg">
-            </a>
-          </div>
           <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="#" class="item-wrap fancybox">
               <div class="work-info">
@@ -202,16 +211,7 @@
               <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
-            </a>
-          </div>
-          </div>
+        </div>
         </div>
       </div>
   </main>
