--- a/financialliteracy.html
+++ b/financialliteracy.html
@@ -79,8 +79,8 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>Introduction to Economics</h2>
-            <p>Overview & its influence.</p>
+            <h2>The Importance of Financial Literacy</h2>
+            <p>What the American education system lacks.&nbsp;</p>
 
           </div>
 
@@ -92,20 +92,21 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/economics_big.jpg" alt="Image" class="img-fluid">
-				<p class="text-center">Photo by <a href="https://unsplash.com/@m_b_m?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">M. B. M.</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-				</p>
+              <img src="img/financialliteracy_big.jpg" alt="Image" class="img-fluid">
+              <p class="text-center">Photo by <a href="https://unsplash.com/@jpvalery?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jp Valery</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+			  </p>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
 				<br>
-                <h3 class="h3">Into to Economics&nbsp;&nbsp;</h3>
-                <p class="mb-4"><span class="text-muted">The Basics of Cash Flow</span></p>
+                <h3 class="h3">Financial Literacy</h3>
+                <p class="mb-4"><span class="text-muted">It Affects All of Society</span></p>
                 <div class="mb-5">
-                  <p>Economics is something everyone has heard of, mostly when talking about money. It relates to money and the stock market, but it isn’t the study of those two things. But, it underlies every decision related to the money we make, including making investments. But how exactly does it tie into investing? Well, the economic way of thinking –– rational choices, opportunity cost, etc. –– certainly applies to investing and life in general. For example, the idea of opportunity cost applies to investing because of the comparison of different types of investments. Opportunity cost is what it sounds like: the cost of one decision/opportunity in comparison to another decision. But that is only the tip of the iceberg when it comes to applying economics within investing. </p>
+                  <p>It’s no secret Americans fall short when it comes to financial literacy. In fact, only 57% of the U.S. adult population is financially literate, which is only slightly higher than that of Botswana, whose economy is 1,127% smaller. Financial illiteracy affects every part of society. The irony lies within us — although the US is regarded as a financial superpower, the very own citizens in America are ignorant when it comes to managing or planning for their prospective finances. </p>
                 </div>
                 <h4 class="h4 mb-3">Read More:</h4>
-                <p><a href="http://streetfins.com/intro-to-economics/" class="readmore">Streetfins</a> <a href="https://medium.com/@funny_dye_walrus_611/intro-to-economics-c78cdd3edf61" class="readmore">Medium</a></p>
+                <p><a href="http://streetfins.com/the-importance-of-financial-literacy/" class="readmore">Streetfins</a> <a href="https://medium.com/@funny_dye_walrus_611/the-importance-of-financial-literacy-4ae1e0bd8096" class="readmore">Medium</a></p>
+			
               </div>
             </div>
           </div>
