--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
               <img class="img-fluid" src="img/basicallyboba.jpg">
             </a>
           </div>
-          <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="introtoeconomics.html" class="item-wrap fancybox">
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="financialliteracy.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Intro to Economics</h3>
+                <h3>The Importance of Financial Literacy</h3>
                 <span>Finance</span>
               </div>
-              <img class="img-fluid" src="img/economics.jpg">
+              <img class="img-fluid" src="img/financialliteracy.jpg">
             </a>
           </div>
-          <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="introtofedreserve.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Intro to The Fed Reserve</h3>
@@ -115,13 +115,13 @@
               <img class="img-fluid" src="img/federalreserve.jpg">
             </a>
           </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
+          <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="introtoeconomics.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3></h3>
-                <span></span>
+                <h3>Intro to Economics</h3>
+                <span>Finance</span>
               </div>
-              <img class="img-fluid" src="img/blank.jpg">
+              <img class="img-fluid" src="img/economics.jpg">
             </a>
           </div>
           <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
