--- a/introtofedreserve.html
+++ b/introtofedreserve.html
@@ -93,17 +93,19 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <img src="img/federalreserve_big.jpg" alt="Image" class="img-fluid">
+				<p class="text-center">Photo by <a href="https://unsplash.com/@ajb?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alex Bierwagen</a> on <a href="https://unsplash.com/s/photos/federal-reserve?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+				</p>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
 				<br>
-                <h3 class="h3">The Federal Reserve System: What Is It?</h3>
-                <p class="mb-4"><span class="text-muted">Its role in our economy</span></p>
+                <h3 class="h3">Intro to the "Fed"&nbsp;</h3>
+                <p class="mb-4"><span class="text-muted">Its Role in our Economy</span></p>
                 <div class="mb-5">
                   <p>The Federal Reserve, commonly dubbed as the “Fed,” is the gatekeeper of the U.S. economy. Its role is to regulate the nation’s financial institutions, such as banks, credit unions, etc. It’s always important to keep an eye on markets when it comes to the Fed meetings. The current chair is Jerome Powell. But before you listen to what he says, you must understand the roots of the Fed itself. </p>
                 </div>
-                <h4 class="h4 mb-3">Read More @ <em>Streetfins</em>&nbsp;&nbsp;</h4>
-                <p><a href="http://streetfins.com/intro-to-the-federal-reserve-system/" class="readmore">Visit Website</a></p>
+                <h4 class="h4 mb-3">Read More:</h4>
+                <p><a href="http://streetfins.com/intro-to-the-federal-reserve-system/" class="readmore">Streetfins</a> <a href="https://medium.com/@funny_dye_walrus_611/intro-to-the-federal-reserve-system-a520f910a30b" class="readmore">Medium</a></p>
               </div>
             </div>
           </div>
@@ -119,14 +121,32 @@
             </div>
           </div>
 
-          <div class="row" data-aos="fade-up" data-aos-delay="200">
-            <div class="item projects col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+          <div class="item projects col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="basicallyboba.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Basically Boba</h3>
                 <span>Projects</span>
               </div>
               <img class="img-fluid" src="img/basicallyboba.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="financialliteracy.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>The Importance of Financial Literacy</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/financialliteracy.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="introtofedreserve.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Intro to The Fed Reserve</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/federalreserve.jpg">
             </a>
           </div>
           <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -138,15 +158,6 @@
               <img class="img-fluid" src="img/economics.jpg">
             </a>
           </div>
-          <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="introtofedreserve.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Intro to The Fed Reserve</h3>
-                <span>Finance</span>
-              </div>
-              <img class="img-fluid" src="img/federalreserve.jpg">
-            </a>
-          </div>
           <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="#" class="item-wrap fancybox">
               <div class="work-info">
@@ -165,16 +176,7 @@
               <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
-		  <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
-            </a>
-          </div>
-          </div>
+        </div>
         </div>
       </div>
   </main>
