--- a/financialliteracy.html
+++ b/financialliteracy.html
@@ -80,7 +80,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>The Importance of Financial Literacy</h2>
-            <p>What the American education system lacks.&nbsp;</p>
+            <p>What the American education system lacks.</p>
 
           </div>
 
