--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -100,7 +100,7 @@
                 <h3 class="h3">About</h3>
                 <p class="mb-4"><span class="text-muted">It All Started With Boba</span></p>
                 <div class="mb-5">
-                  <p>Basically Boba was created out of my growing resentment towards the low-quality, unhealthy boba served in the Bay Area. Many boba shops chose to use cheaper and unhealthier alternatives to flavor their drinks– “fruit” syrups that are 99% high fructose corn syrup, “milk” powder that doesn’t even contain real dairy, and tea leaves reused beyond their capacity just to save some money. Check out our website for more information. </p>
+                  <p>Basically Boba was created out of my growing resentment towards the low-quality, unhealthy boba served in the Bay Area. Many boba shops chose to use cheaper and unhealthier alternatives to flavor their drinks– “fruit” syrups that are 99% high fructose corn syrup, “milk” powder that doesn’t even contain real dairy, and tea leaves reused beyond their capacity just to save some money. With the growing uncertainty of COVID-19, we are taking our best interest into planning for the future of the company. Check out our website for more information. </p>
                 </div>
                 <h4 class="h4 mb-3">What We Did:</h4>
                 <ul class="list-unstyled list-line mb-5">
