--- a/introtoeconomics.html
+++ b/introtoeconomics.html
@@ -132,6 +132,15 @@
             </a>
           </div>
 		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="systemicracism.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Economic Effects of Systemic Racism</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/systemicracism.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="financialliteracy.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>The Importance of Financial Literacy</h3>
@@ -156,15 +165,6 @@
                 <span>Finance</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
-            </a>
-          </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
           <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
