--- a/systemicracism.html
+++ b/systemicracism.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mjl – basically boba</title>
+  <title>mjl – intro to economics</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -79,8 +79,8 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>Basically Boba</h2>
-            <p>A healthier alternative to Asia's delicacy drink.</p>
+            <h2>Economic Effects of Systemic Racism</h2>
+            <p>America's long overdue awakening.</p>
 
           </div>
 
@@ -92,58 +92,24 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/basicallyboba_big.jpg" alt="Image" class="img-fluid">
+              <img src="img/systemicracism_big.jpg" alt="Image" class="img-fluid">
+              <p class="text-center">Photo by <a href="https://unsplash.com/@mcoswalt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener nofollow">Maria Oswalt</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener nofollow">Unsplash</a><br>
+			  </p>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
 				<br>
-                <h3 class="h3">About</h3>
-                <p class="mb-4"><span class="text-muted">It All Started With Boba</span></p>
+                <h3 class="h3">Systemic Racism</h3>
+                <p class="mb-4"><span class="text-muted">The Persistent Inequity</span></p>
                 <div class="mb-5">
-                  <p>Basically Boba was created out of my growing resentment towards the low-quality, unhealthy boba served in the Bay Area. Many boba shops chose to use cheaper and unhealthier alternatives to flavor their drinks– “fruit” syrups that are 99% high fructose corn syrup, “milk” powder that doesn’t even contain real dairy, and tea leaves reused beyond their capacity just to save some money. With the growing uncertainty of COVID-19, we are taking our best interest into planning for the future of the company. Check out our website for more information. </p>
+                  <p>These past few weeks have laid bare that our nation is enraged at inequity. Every person with common sense can acknowledge the rawness of the abuse people of color experience in this country, from the ongoing indignities to the extreme violence, like the horrendous killing of George Floyd. This raises the question that everyone is asking: why does racism still exist? Our country has overcome many social, economic, and political barriers, yet racism is still prevalent in our society. Systemic racism, or institutional racism, is a form of racism that is expressed in the practice of social, economic, and political institutions. Today, African-Americans face continuing disparities in terms of wealth, employment, education, housing, and representation in leadership positions. Much of this is due to the detrimental economic effects of institutional racism. </p>
                 </div>
-                <h4 class="h4 mb-3">What We Did:</h4>
-                <ul class="list-unstyled list-line mb-5">
-                  <li>Made-to-Order System</li>
-                  <li>Transparent &amp; Healthy Ingredients</li>
-                  <li>User-Friendly Website&nbsp;&nbsp;</li>
-                  <li>Social Media Marketing</li>
-                </ul>
-
-                <p><a href="http://basicallyboba.com" class="readmore">Visit Website</a></p>
+                <h4 class="h4 mb-3">Read More:</h4>
+                <p><a href="#" class="readmore">Streetfins</a> <a href="https://medium.com/@matthewjlim/economic-effects-of-systemic-racism-643ed7d87527" class="readmore">Medium</a></p>
+			
               </div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <div class="site-section pb-0">
-        <div class="container">
-
-          <div class="owl-carousel testimonial-carousel">
-
-            <div class="testimonial-wrap">
-              <div class="testimonial">
-                <img src="img/person1.jpg" alt="Image" class="img-fluid">
-                <blockquote>
-                  <p>"The boba tastes super great! It's really nice having fresh boba at school since we can't get that anywhere else. The drinks are so good—epsecially the coffee."</p>
-                </blockquote>
-                <p>&mdash; Akanksha Banerjee</p>
-              </div>
-            </div>
-
-            <div class="testimonial-wrap">
-              <div class="testimonial">
-                <img src="img/person2.jpg" alt="Image" class="img-fluid">
-                <blockquote>
-                  <p>"It tastes really fresh. It's basically boba."</p>
-                </blockquote>
-                <p>&mdash; Daniel Wu</p>
-              </div>
-            </div>
-
-          </div>
-
         </div>
       </div>
 		
