--- a/financialliteracy.html
+++ b/financialliteracy.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mjl – intro to economics</title>
+  <title>mjl – importance of financial literacy</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
