--- a/systemicracism.html
+++ b/systemicracism.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mjl – intro to economics</title>
+  <title>mjl – economics of systemic racism</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -79,7 +79,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>Economic Effects of Systemic Racism</h2>
+            <h2>Economics of Systemic Racism</h2>
             <p>America's long overdue awakening.</p>
 
           </div>
@@ -105,7 +105,7 @@
                   <p>These past few weeks have laid bare that our nation is enraged at inequity. Every person with common sense can acknowledge the rawness of the abuse people of color experience in this country, from the ongoing indignities to the extreme violence, like the horrendous killing of George Floyd. This raises the question that everyone is asking: why does racism still exist? Our country has overcome many social, economic, and political barriers, yet racism is still prevalent in our society. Systemic racism, or institutional racism, is a form of racism that is expressed in the practice of social, economic, and political institutions. Today, African-Americans face continuing disparities in terms of wealth, employment, education, housing, and representation in leadership positions. Much of this is due to the detrimental economic effects of institutional racism. </p>
                 </div>
                 <h4 class="h4 mb-3">Read More:</h4>
-                <p><a href="#" class="readmore">Streetfins</a> <a href="https://medium.com/@matthewjlim/economic-effects-of-systemic-racism-643ed7d87527" class="readmore">Medium</a></p>
+                <p><a href="http://streetfins.com/economics-of-systemic-racism/" class="readmore">Streetfins</a> <a href="https://medium.com/@matthewjlim/economic-effects-of-systemic-racism-643ed7d87527" class="readmore">Medium</a></p>
 			
               </div>
             </div>
