--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -169,7 +169,7 @@
 		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="systemicracism.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Economic Effects of Systemic Racism</h3>
+                <h3>Economics of Systemic Racism</h3>
                 <span>Finance</span>
               </div>
               <img class="img-fluid" src="img/systemicracism.jpg">
