--- a/introtoeconomics.html
+++ b/introtoeconomics.html
@@ -105,7 +105,7 @@
                   <p>Economics is something everyone has heard of, mostly when talking about money. It relates to money and the stock market, but it isn’t the study of those two things. But, it underlies every decision related to the money we make, including making investments. But how exactly does it tie into investing? Well, the economic way of thinking –– rational choices, opportunity cost, etc. –– certainly applies to investing and life in general. For example, the idea of opportunity cost applies to investing because of the comparison of different types of investments. Opportunity cost is what it sounds like: the cost of one decision/opportunity in comparison to another decision. But that is only the tip of the iceberg when it comes to applying economics within investing. </p>
                 </div>
                 <h4 class="h4 mb-3">Read More:</h4>
-                <p><a href="http://streetfins.com/intro-to-economics/" class="readmore">Streetfins</a> <a href="https://medium.com/@matthewjlim/intro-to-economics-c78cdd3edf61" class="readmore">Medium</a></p>
+                <p><a href="http://streetfins.com/intro-to-economics/" class="readmore">Streetfins</a> <a href="https://matthewjlim.medium.com/intro-to-economics-c78cdd3edf61" class="readmore">Medium</a></p>
               </div>
             </div>
           </div>
@@ -129,6 +129,15 @@
                 <span>Projects</span>
               </div>
               <img class="img-fluid" src="img/basicallyboba.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="covid19.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>COVID-19’s Impact On Small Businesses</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/covid19.jpg">
             </a>
           </div>
 		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -165,15 +174,6 @@
                 <span>Finance</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
-            </a>
-          </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
         </div>
