--- a/introtofedreserve.html
+++ b/introtofedreserve.html
@@ -105,7 +105,7 @@
                   <p>The Federal Reserve, commonly dubbed as the “Fed,” is the gatekeeper of the U.S. economy. Its role is to regulate the nation’s financial institutions, such as banks, credit unions, etc. It’s always important to keep an eye on markets when it comes to the Fed meetings. The current chair is Jerome Powell. But before you listen to what he says, you must understand the roots of the Fed itself. </p>
                 </div>
                 <h4 class="h4 mb-3">Read More:</h4>
-                <p><a href="http://streetfins.com/intro-to-the-federal-reserve-system/" class="readmore">Streetfins</a> <a href="https://medium.com/@matthewjlim/intro-to-the-federal-reserve-system-a520f910a30b" class="readmore">Medium</a></p>
+                <p><a href="http://streetfins.com/intro-to-the-federal-reserve-system/" class="readmore">Streetfins</a> <a href="https://matthewjlim.medium.com/intro-to-the-federal-reserve-system-a520f910a30b" class="readmore">Medium</a></p>
               </div>
             </div>
           </div>
@@ -129,6 +129,15 @@
                 <span>Projects</span>
               </div>
               <img class="img-fluid" src="img/basicallyboba.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="covid19.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>COVID-19’s Impact On Small Businesses</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/covid19.jpg">
             </a>
           </div>
 		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -165,15 +174,6 @@
                 <span>Finance</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
-            </a>
-          </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
         </div>
