--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -80,7 +80,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Basically Boba</h2>
-            <p>A healthier alternative to Asia's delicacy drink.</p>
+            <p>Student-run business aiming for authenticity, qualty, and passion. Challenging the unhealthy stigma associated with boba one step at a time.</p>
 
           </div>
 
@@ -167,6 +167,15 @@
             </a>
           </div>
 		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="covid19.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>COVID-19’s Impact On Small Businesses</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/covid19.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="systemicracism.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Economics of Systemic Racism</h3>
@@ -200,15 +209,6 @@
                 <span>Finance</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
-            </a>
-          </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
         </div>
