--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
             </a>
           </div>
 		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="covid19.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>COVID-19’s Impact On Small Businesses</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/covid19.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="systemicracism.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Economics of Systemic Racism</h3>
@@ -131,15 +140,6 @@
                 <span>Finance</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
-            </a>
-          </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
         </div>
