--- a/systemicracism.html
+++ b/systemicracism.html
@@ -106,7 +106,7 @@
  </p>
                 </div>
                 <h4 class="h4 mb-3">Read More:</h4>
-                <p><a href="http://streetfins.com/economics-of-systemic-racism/" class="readmore">Streetfins</a> <a href="https://medium.com/@matthewjlim/economic-effects-of-systemic-racism-643ed7d87527" class="readmore">Medium</a></p>
+                <p><a href="http://streetfins.com/economics-of-systemic-racism/" class="readmore">Streetfins</a> <a href="https://matthewjlim.medium.com/economic-effects-of-systemic-racism-643ed7d87527" class="readmore">Medium</a></p>
 			
               </div>
             </div>
@@ -131,6 +131,15 @@
                 <span>Projects</span>
               </div>
               <img class="img-fluid" src="img/basicallyboba.jpg">
+            </a>
+          </div>
+		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="covid19.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>COVID-19’s Impact On Small Businesses</h3>
+                <span>Finance</span>
+              </div>
+              <img class="img-fluid" src="img/covid19.jpg">
             </a>
           </div>
 		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -167,15 +176,6 @@
                 <span>Finance</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
-            </a>
-          </div>
-          <div class="item * col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3></h3>
-                <span></span>
-              </div>
-              <img class="img-fluid" src="img/blank.jpg">
             </a>
           </div>
         </div>
