--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -100,14 +100,16 @@
                 <h3 class="h3">About</h3>
                 <p class="mb-4"><span class="text-muted">It All Started With Boba</span></p>
                 <div class="mb-5">
-                  <p>Basically Boba was created out of my growing resentment towards the low-quality, unhealthy boba served in the Bay Area. Many boba shops chose to use cheaper and unhealthier alternatives to flavor their drinks– “fruit” syrups that are 99% high fructose corn syrup, “milk” powder that doesn’t even contain real dairy, and tea leaves reused beyond their capacity just to save some money. With the growing uncertainty of COVID-19, we are taking our best interest into planning for the future of the company. Check out our website for more information. </p>
+                  <p>Basically Boba was created out of my growing resentment towards the low-quality, unhealthy boba served in the Bay Area. Many boba shops chose to use cheaper and unhealthier alternatives to flavor their drinks — “fruit” syrups that are 99% high fructose corn syrup, “milk” powder that doesn’t even contain real dairy, and tea leaves reused beyond their capacity just to save some money.</p>
+				<p>We believe in providing high-quality boba drinks using the healthiest and freshest ingredients; crafted by the best brew. No powders. No syrups. No artificial additives. Basically put, we use premium loose-leaf tea and boba sourced from the highest quality tea vendors from Taiwan.
+
+</p>
                 </div>
                 <h4 class="h4 mb-3">What We Did:</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Made-to-Order System</li>
-                  <li>Transparent &amp; Healthy Ingredients</li>
-                  <li>User-Friendly Website&nbsp;&nbsp;</li>
-                  <li>Social Media Marketing</li>
+                  <li>Free No-Contact Home Delivery System</li>
+                  <li>Developed Original Drinks Using High-Quality Ingredients from Taiwan Vendors</li>
+				  <li>Donated Over 1000$ from Hundreds of Drinks to Multiple Nonprofit Organizations</li>
                 </ul>
 
                 <p><a href="http://basicallyboba.com" class="readmore">Visit Website</a></p>
