--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -107,7 +107,7 @@
                 </div>
                 <h4 class="h4 mb-3">What We Did:</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Free No-Contact Home Delivery System</li>
+                  <li>Created a Free No-Contact Home Delivery System</li>
                   <li>Developed Original Drinks Using High-Quality Ingredients from Taiwan Vendors</li>
 				  <li>Donated Over 1000$ from Hundreds of Drinks to Multiple Nonprofit Organizations</li>
                 </ul>
