--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -108,8 +108,8 @@
                 <h4 class="h4 mb-3">What We Did:</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>Created a Free No-Contact Home Delivery System</li>
-                  <li>Developed Original Drinks Using High-Quality Ingredients from Taiwan Vendors</li>
-				  <li>Donated Over 1000$ from Hundreds of Drinks to Multiple Nonprofit Organizations</li>
+                  <li>Developed Original Drinks Using High-Quality Ingredients from Taiwanese Vendors</li>
+                  <li>Donated Over 1000$ from Hundreds of Drinks to Multiple Nonprofit Organizations</li>
                 </ul>
 
                 <p><a href="http://basicallyboba.com" class="readmore">Visit Website</a></p>
