--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -80,8 +80,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Basically Boba</h2>
-            <p>Student-run business aiming for authenticity, qualty, and passion. Challenging the unhealthy stigma associated with boba one step at a time.</p>
-
+            <p>Student-run business aiming for authenticity, quality, and passion. Challenging the unhealthy stigma associated with boba one step at a time.</p>
           </div>
 
 
