--- a/basicallyboba.html
+++ b/basicallyboba.html
@@ -156,8 +156,7 @@
               <p>Check out my other stuff!</p>
             </div>
           </div>
-
-          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item projects col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="basicallyboba.html" class="item-wrap fancybox">
               <div class="work-info">
@@ -167,47 +166,47 @@
               <img class="img-fluid" src="img/basicallyboba.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="covid19.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>COVID-19’s Impact On Small Businesses</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/covid19.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="systemicracism.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Economics of Systemic Racism</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/systemicracism.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="financialliteracy.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>The Importance of Financial Literacy</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/financialliteracy.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="introtofedreserve.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Intro to The Fed Reserve</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/federalreserve.jpg">
             </a>
           </div>
-          <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="introtoeconomics.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Intro to Economics</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
             </a>
