--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Hey, I'm Matthew Lim</h2>
-            <p class="mb-0">Student w/ a passion for finance and other things</p>
+            <p class="mb-0">Student w/ an unhealthy obsession for caffeine, social change, and other things business</p>
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".projects">Projects</a>
-              <a href="#" data-filter=".finance">Finance</a>
+              <a href="#" data-filter=".articles">Articles</a>
             </div>
           </div>
         </div>
@@ -97,47 +97,47 @@
               <img class="img-fluid" src="img/basicallyboba.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="covid19.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>COVID-19’s Impact On Small Businesses</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/covid19.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="systemicracism.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Economics of Systemic Racism</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/systemicracism.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="financialliteracy.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>The Importance of Financial Literacy</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/financialliteracy.jpg">
             </a>
           </div>
-		  <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+		  <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="introtofedreserve.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Intro to The Fed Reserve</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/federalreserve.jpg">
             </a>
           </div>
-          <div class="item finance col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item articles col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="introtoeconomics.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Intro to Economics</h3>
-                <span>Finance</span>
+                <span>Articles</span>
               </div>
               <img class="img-fluid" src="img/economics.jpg">
             </a>
