--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">Currently, I am a prospective high-school senior from the Bay Area. My interests lie at the intersection of finance, entrepreneurship, and programming. I'm passionate about leveraging my knowledge to solve challenges in financial illiteracy.</p>
+            <p class="mb-0">Currently, I am a college freshman from the Bay Area. My interests lie at the intersection of entrepreneurship, finance and data science and programming. I'm passionate about leveraging my knowledge to solve challenges in financial illiteracy, through writing and data.</p>
           </div>
 
         </div>
