--- a/about.html
+++ b/about.html
@@ -91,36 +91,47 @@
           <div class="col-md-6 ml-auto order-2 offset-xl-0" data-aos="fade-up">
             <h3 class="h3 mb-4">Skills</h3>
             <ul class="list-unstyled">
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>HTML &amp; CSS</strong>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Java</strong>
-                </div>
-              </li>
-			  <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Product Design</strong>
-                </div>
-              </li>
-			  <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Web Design</strong>
-                </div>
-              </li>
-			  <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Microsoft Office</strong>
-                </div>
-              </li>
-			  <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Google Sheets</strong>
-                </div>
-              </li>
+
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>Java</strong>
+                    </div>
+                </li>
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>C++</strong>
+                    </div>
+                </li>
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>HTML &amp; CSS</strong>
+                    </div>
+                </li>
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>Photoshop</strong>
+                    </div>
+                </li>
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>Adobe Creative Apps</strong>
+                    </div>
+                </li>
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>Search Engine Optimization (SEO)</strong>
+                    </div>
+                </li>
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>Social Media &Aacute; Digital Media</strong>
+                    </div>
+                </li>
+                <li class="mb-3">
+                    <div class="d-flex mb-1">
+                        <strong>Google Analytics</strong>
+                    </div>
+                </li>
             </ul>
           </div>
 
