--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                 </li>
                 <li class="mb-3">
                     <div class="d-flex mb-1">
-                        <strong>Social Media &Aacute; Digital Media</strong>
+                        <strong>Social Media &amp; Digital Media</strong>
                     </div>
                 </li>
                 <li class="mb-3">
